fix the css for the header of the ontology browser so it would wrap to the next line for smaller screen
Reviewer: Tiff Go (post commit)

Issue: none

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -4,43 +4,6 @@ body {
   font-family: 'Open Sans', 'Segoe UI','Helvetica Neue', Arial, sans-serif;
   font-size: 13px;
 }
-/*
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-  font-family: 'Open Sans', 'Segoe UI','Helvetica Neue', Arial, sans-serif;
-}
-
-h1,
-.h1 {
-  font-size: 26px;
-   font-weight: bold;
-}
-h2,
-.h2 {
-  font-size: 26px;
-  font-weight: bold;
-}
-h3,
-.h3 {
-  font-size: 20px;
-  font-weight: 300;
-}
-h4,
-.h4 {
-  font-size: 18px;
-  font-weight: 300;
-}
-*/
 .heading{color:#333;font-family:'Open Sans','Segoe UI','Helvetica Neue',Arial,sans-serif;letter-spacing:normal;font-weight:500;margin-bottom:5px;margin-left:0;margin-right:0;margin-top:10px;box-sizing:border-box;font-size:18px;height:18px;line-height:18px;font-weight:600;}
 h1,h2,h3,h4,h5,h6,
 .h1,.h2,.h2_no_transform,.h3,.h3_no_transform,.h4,.h5,.h6{display:block;color:#333;font-family:'Open Sans','Segoe UI','Helvetica Neue',Arial,sans-serif;letter-spacing:normal;font-weight:500;margin-bottom:5px;margin-left:0;margin-right:0;margin-top:10px;box-sizing:border-box}
@@ -50,10 +13,10 @@ h1,.h1{font-size:26px;font-weight:500;height:26px;line-height:26px;text-transfor
 h2,.h2{font-size:18px;height:18px;line-height:18px;font-weight:600;text-transform:uppercase}
 .h2_no_transform{font-size:18px;height:18px;line-height:18px;font-weight:600;}
 h2.light,.h2.light{font-weight: 300; color:#999;}
-h3,.h3{font-size:16px;height:16px;line-height:16px;font-weight:600;text-transform:uppercase}
-.h3_no_transform{font-size:16px;height:16px;line-height:16px;font-weight:600;}
-h4,.h4{font-size:15.5px;height:15px;line-height:15px;font-weight:500}
-h5,.h5{font-size:15px;font-weight:500;height:15px;line-height:15px;text-transform:uppercase}
+h3,.h3{font-size:16px;line-height:16px;font-weight:600;text-transform:uppercase}
+.h3_no_transform{font-size:16px;line-height:16px;font-weight:600;}
+h4,.h4{font-size:15.5px;line-height:15px;font-weight:500}
+h5,.h5{font-size:15px;font-weight:500;line-height:15px;text-transform:uppercase}
 h6,.h6{font-size:13px;font-weight:500;line-height:13px}
 
 .sub-heading{
